--- a/Stylesheets/style.scss
+++ b/Stylesheets/style.scss
@@ -6,15 +6,12 @@ body {
     flex-direction: column;
     height: 100vh;
     margin-left: 10px;
+    background-color: azure;
 }
 
 .button-collection {
     flex-direction: column;
     justify-content: center;
-
-    &:active{
-        font-size:1.15rem;
-    }
 }
 
 .button-fetch {
@@ -27,4 +24,24 @@ body {
     margin-left: 10px;
     flex-direction: column;
     justify-content: center;
+}
+
+@each $weather-container, $color in $button-style {
+    .#{$weather-container} {
+        $regular: ($color, 1);
+        $hover: ($color, 2);
+        $active: ($color, 3);
+
+        background-color: $regular;
+        color: $active;
+
+        &:hover,
+        &:focus {
+            background-color: $hover;
+        }
+
+        &:active {
+            background-color: $active;
+        }
+    }
 }
